# Wait-Free-Atomic-Snapshot

./: AtomicSnapshot.cpp  CMakeLists.txt  LICENSE  README.md  compile.sh  main.cpp  run  snapshot_test
include/: AtomicSnapshot.hpp  AtomicSnapshot.tpp
test/: CMakeLists.txt  basic_test.cc
